# cpuminer

./: Makefile.am  cpu-miner.c  miner.h  x11evo.c
